--- a/css/contact.css
+++ b/css/contact.css
@@ -77,6 +77,9 @@
 .side-menu {
   display: flex;
   flex-direction: column;
+  overflow-y: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
   position: fixed;
   right: -200px;
   background-color: var(--main-bg-color);
@@ -166,6 +169,16 @@
   .connect i:hover {
     color: var(--border-color)!important;
     cursor: pointer
+  }
+
+  .black-effect {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    display: none;
+    background-color: rgb(0, 0, 0, 0.5);
+    z-index: 3;
+    top: 0;
   }
   
 
